# conway

./: README.md  package-lock.json  pyproject.toml
conway/: main.py
