[project]
name = "conway"
version = "0.1.0"
description = ""
authors = [
    {name = "RegmiS",email = "sandeshreg35@gmail.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pyqtgraph (>=0.13.7,<0.14.0)",
    "pyqt5 (>=5.15.11,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mat = "conway.main:main"